--- a/package.json
+++ b/package.json
@@ -12,6 +12,10 @@
     "dotenv": "^16.6.1",
     "express": "^4.21.2",
     "mongoose": "^7.8.7",
-    "node-fetch": "^3.3.2"
+    "node-fetch": "^3.3.2",
+    "openai": "^6.6.0"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.10"
   }
 }
