--- a/package.json
+++ b/package.json
@@ -8,12 +8,13 @@
     "start": "node server.js"
   },
   "dependencies": {
-    "cloudinary": "^2.8.0",
+    "cloudinary": "^1.30.0",
     "cors": "^2.8.5",
     "dotenv": "^16.6.1",
     "express": "^4.21.2",
     "mongoose": "^7.8.7",
     "multer": "^2.0.2",
+    "multer-storage-cloudinary": "^4.0.0",
     "node-fetch": "^3.3.2",
     "openai": "^6.6.0"
   },
