--- a/package.json
+++ b/package.json
@@ -1,24 +1,15 @@
 {
   "name": "miportal-inmobiliario",
   "version": "1.0.0",
-  "description": "",
-  "main": "server.js",
   "type": "module",
   "scripts": {
-    "start": "node server.js"
+    "start": "node server.mjs"
   },
   "dependencies": {
-    "cloudinary": "^1.30.0",
     "cors": "^2.8.5",
-    "dotenv": "^16.6.1",
-    "express": "^4.21.2",
-    "mongoose": "^7.8.7",
-    "multer": "^2.0.2",
-    "multer-storage-cloudinary": "^4.0.0",
-    "node-fetch": "^3.3.2",
-    "openai": "^6.6.0"
-  },
-  "devDependencies": {
-    "nodemon": "^3.1.10"
+    "dotenv": "^16.4.5",
+    "express": "^4.19.2",
+    "mongoose": "^8.4.1",
+    "multer": "^1.4.5"
   }
 }
